--- a/data/edituserdialog.glade
+++ b/data/edituserdialog.glade
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
   <object class="GtkDialog" id="edituserdialog">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">Reset Password</property>
+    <property name="title" translatable="yes">Edit user</property>
     <property name="type_hint">dialog</property>
+    <child>
+      <placeholder/>
+    </child>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox1">
         <property name="can_focus">False</property>
@@ -35,7 +38,6 @@
               <object class="GtkButton" id="okbutton">
                 <property name="label">gtk-ok</property>
                 <property name="visible">True</property>
-                <property name="sensitive">False</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
@@ -53,114 +55,139 @@
             <property name="position">0</property>
           </packing>
         </child>
-		<child>
-		  <object class="GtkAlignment" id="alignment1">
-			<property name="visible">True</property>
-			<property name="can_focus">False</property>
-			<property name="left_padding">10</property>
-			<property name="right_padding">10</property>
-			<property name="top_padding">10</property>
-			<property name="bottom_padding">10</property>
-			<child>
-			  <object class="GtkGrid" id="grid1">
-				<property name="visible">True</property>
-				<property name="can_focus">False</property>
-				<property name="row_spacing">5</property>
-				<property name="column_spacing">10</property>
-				<property name="row_homogeneous">True</property>
-				<child>
-				  <object class="GtkLabel" id="label2">
-					<property name="visible">True</property>
-					<property name="can_focus">False</property>
-					<property name="label" translatable="yes">User:</property>
-					<property name="xalign">0</property>
-				  </object>
-				  <packing>
-					<property name="left_attach">0</property>
-					<property name="top_attach">0</property>
-				  </packing>
-				</child>
-				<child>
-				  <object class="GtkLabel" id="userlabel">
-					<property name="visible">True</property>
-					<property name="can_focus">False</property>
-					<property name="xalign">0</property>
-				  </object>
-				  <packing>
-					<property name="left_attach">1</property>
-					<property name="top_attach">0</property>
-				  </packing>
-				</child>
-				<child>
-				  <object class="GtkLabel" id="label3">
-					<property name="visible">True</property>
-					<property name="can_focus">False</property>
-					<property name="label" translatable="yes">Password:</property>
-					<property name="xalign">0</property>
-				  </object>
-				  <packing>
-					<property name="left_attach">0</property>
-					<property name="top_attach">1</property>
-				  </packing>
-				</child>
-				<child>
-				  <object class="GtkEntry" id="passentry">
-					<property name="visible">True</property>
-					<property name="can_focus">True</property>
-					<property name="visibility">False</property>
-					<property name="input_purpose">password</property>
-				  </object>
-				  <packing>
-					<property name="left_attach">1</property>
-					<property name="top_attach">1</property>
-				  </packing>
-				</child>
-				<child>
-				  <object class="GtkLabel" id="label4">
-					<property name="visible">True</property>
-					<property name="can_focus">False</property>
-					<property name="label" translatable="yes">Confirm password:</property>
-					<property name="xalign">0</property>
-				  </object>
-				  <packing>
-					<property name="left_attach">0</property>
-					<property name="top_attach">2</property>
-				  </packing>
-				</child>
-				<child>
-				  <object class="GtkEntry" id="pass2entry">
-					<property name="visible">True</property>
-					<property name="can_focus">True</property>
-					<property name="visibility">False</property>
-				  </object>
-				  <packing>
-					<property name="left_attach">1</property>
-					<property name="top_attach">2</property>
-				  </packing>
-				</child>
-				<child>
-				  <object class="GtkCheckButton" id="showpasscheck">
-					<property name="label" translatable="yes">Show passwords</property>
-					<property name="visible">True</property>
-					<property name="can_focus">True</property>
-					<property name="receives_default">False</property>
-					<property name="xalign">0</property>
-					<property name="draw_indicator">True</property>
-				  </object>
-				  <packing>
-						<property name="left_attach">0</property>
-						<property name="top_attach">3</property>
-				  </packing>
-				</child>
-			  </object>
-			  <packing>
-				<property name="expand">False</property>
-				<property name="fill">True</property>
-				<property name="position">0</property>
-			  </packing>
-			</child>
-		  </object>
-		</child>
+        <child>
+          <object class="GtkAlignment" id="alignment1">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="top_padding">10</property>
+            <property name="bottom_padding">10</property>
+            <property name="left_padding">10</property>
+            <property name="right_padding">10</property>
+            <child>
+              <object class="GtkGrid" id="grid1">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="row_spacing">5</property>
+                <property name="column_spacing">10</property>
+                <property name="row_homogeneous">True</property>
+                <child>
+                  <object class="GtkLabel" id="label2">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">User:</property>
+                    <property name="xalign">0</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">0</property>
+                    <property name="top_attach">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkLabel" id="userlabel">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="xalign">0</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="top_attach">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkCheckButton" id="showpasscheck">
+                    <property name="label" translatable="yes">Show passwords</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="xalign">0</property>
+                    <property name="draw_indicator">True</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">0</property>
+                    <property name="top_attach">4</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkLabel" id="label4">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">Confirm password:</property>
+                    <property name="xalign">0</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">0</property>
+                    <property name="top_attach">3</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkEntry" id="pass2entry">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="visibility">False</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="top_attach">3</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkLabel" id="label3">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">Password:</property>
+                    <property name="xalign">0</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">0</property>
+                    <property name="top_attach">2</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkEntry" id="passentry">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="visibility">False</property>
+                    <property name="input_purpose">password</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="top_attach">2</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">Description:</property>
+                    <property name="xalign">0</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">0</property>
+                    <property name="top_attach">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkEntry" id="descentry">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="top_attach">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <placeholder/>
+                </child>
+              </object>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
       </object>
     </child>
     <action-widgets>
